[tool.poetry]
name = "google-spreadsheet-ledger"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "google_spreadsheet_ledger"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.2"
google-api-python-client = "^2.68.0"
pandas = "^1.5.2"
shillelagh = {extras = ["datasetteapi"], version = "^1.1.3"}
watchdog = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
