[tool.poetry]
name = "google-spreadsheet-ledger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "google_spreadsheet_ledger"}]

[tool.poetry.dependencies]
python = "3.8.*"
google-api-python-client = "2.68.0"
pandas = "1.5.2"
shillelagh = "1.1.3"
streamlit = "1.15.2"
watchdog = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
